  * NEW FEATURE: It is possible to add any message from chat to history  
  * NEW FEATURE: Added menu to clear history for all contacts
  * NEW FEATURE: Added smiles in message chat
  * NEW FEATURE: Now is possible to copy text from chat or from history
                 and use it when writing new message
  * BUGFIX: Problems with filetransfer to ips with more then 2 digits resolved
  * BUGFIX: Timestamp for offline messages is now correct
  * BUGFIX: Working with file browser cannot close app on Nokia phones anymore
  * BUGFIX: Play sound is synchronized now. Should fix sound bug on Nokia
  * Jimm wil now only weakup from minimized if your status is online of free for chat
  * Keylock message is now directly drawn to splash canvas
  * Improved navigation in chat
  * Jimm will now only weakup from minimized if your status is online of free for chat
  * Added counter to message notifyer on keylock splashscreen
  * Added choice of gender to search user function
  * Added visual notification about incoming message or about contact status 
    changing when message is writing

________________________________________________________________________________
VERSION 0.4.2

  * NEW FEATURE: It is possible to check is contact in offline or in invisible status
  * NEW FEATURE: There is a module allowing you to connect via a SOCKS proxy
  * BUGFIX: Corrected wrong coding for offline messages
  * BUGFIX: Requesting status message from users in DND and OCC state was not working
  * BUGFIX: Requesting status message with MIDP2, SIEMENS2 and MOTOROLA version without 
            files module was not working
  * You can now see on about screen if you have the latest version of Jimm
  * Now you can see full contact information
  * New structure for res files  
  * build-release.xml is now building a .7z archive instead of .tar.gz
  * Rewrote the code for the Options UI to be more moduar and nicer
  * Smiles are inserted at correct possition on Sony Ericsson phones